# tray_icon-with-PYQ5

./: .githu  CMakeLists.txt  mac.py  msi.wxs  osquery_wix_patch.xml  vistar.py
.github/workflows/: build-msi.yml  test.yml
images/: vistar.rtf
platform/: common.cmake
platform/windows/: common.cmake  nuget.cmake  wix.cmake
